     * -m,--multi-row Enables support for platforms that allow multiple
       rows to be specified in a single insert statement.
* Added -n (--repeat) option to \eval allowing the batch of SQL being
  evaluated to be run multiple times.  Each iteration of evaluation
  will have a variable ${iteration} set that it can refer to if it
  wants to vary the SQL behavior by iteration.
* Added ${binstr_fmt}, a boolean variable, that controls whether or 
  not binary values are displayed as raw binary values (false=0xabcd) 
  or as binary string values (true=X'abcd').
* Added ${exec_mode} variable that can change the manner in which 
  jsqsh executes SQL against the remote server. This can be one of
  "immediate" (the default) or "prepare".
* Added driver name 'db2zos'. This is identical to the "db2" driver
  except that it sets the "emulateParameterMetaDataForZCalls" property
  and sets the execution mode to "prepare" upon connection (DB2 z/OS
  can execute "call procname()" calls if the SQL is prepared first).
* Added <SessionVariable> property in the drivers.xml that allows a 
  driver to set certain session variable values upon connection.
* Added --show-password option to "\connect --list" because I keep
  forgetting passwords to systems.
* Added sql-skin driver definition for the IBM DB2 SQL Skin for ASE
  driver (I happen to work for them, so have a bit of incentive).
* The "perfect" display style no longer holds all of the rows in
  memory prior to display.  Instead, it is now controlled by a new
  variable ${perfect_sample_rows} (default value 500). So now, 
  ${perfect_sample_rows} rows are held in memory for analysis prior
  to display. Once this limit has been hit, rows are streamed and
  no longer held in memory.
* The ${maxrows} variable now defaults to 0 (unlimited rows) rather
  than 500.
* More care is taken to ensure that database connections are actually
  formally close()'d when jsqsh exits or a session terminates.